--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-"name": "GataBotLite-MD",
+"name": "Admin-TK",
 "version": "1.4.0", 
 "description": "Super Bot WhatsApp",
 "main": "index.js",
@@ -18,16 +18,16 @@
 "test": "node test.js",
 "test2": "nodemon index.js" },
     
-"homepage": "https://github.com/GataNina-Li/GataBotLite-MD",
+"homepage": "https://github.com/JJoan02/Admin-TK",
 "author": {
-"name": "GataNina-Li" }, 
+"name": "JJoan02" }, 
     
 "repository": {
 "type": "git",
- "url": "git+https://github.com/GataNina-Li/GataBotLite-MD.git" },
+ "url": "git+https://github.com/JJoan02/Admin-TK.git" },
  
 "bugs": {
-"url": "https://github.com/GataNina-Li/GataBotLite-MD/issues" },
+"url": "https://github.com/JJoan02/Admin-TK/issues" },
 "license": "GPL-3.0-or-later",
 "dependencies": {
 "@whiskeysockets/baileys": "^6.7.0",
