--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-"name": "GataBot-MD",
-"version": "1.7.0", 
+"name": "Admin-TK",
+"version": "1.0.0", 
 "description": "Super Bot WhatsApp",
 "main": "index.js",
 "type": "module",
