--- a/app.json
+++ b/app.json
@@ -1,10 +1,10 @@
 {
-"name": "GataBot-MD",
-"website": "https://github.com/GataNina-Li",
+"name": "Admin-TK",
+"website": "https://github.com/JJoan02",
 "description": "Super Bot WhatsApp",
-"repository": "https://github.com/GataNina-Li/GataBot-MD",
+"repository": "https://github.com/JJoan02/Admin-TK",
 "logo": "https://telegra.ph/file/b46f45b5b69f311db31c7.jpg",
-"success_url": "https://github.com/GataNina-Li/GataBot-MD",
+"success_url": "https://github.com/JJoan02/Admin-TK",
 "keywords": [
 "nodejs", "heroku", "bot", "spanish", "english", "indonesian", "arab", "portuguese", "italian", "french", "whatsapp",
 "termux", "superbot", "multi-device", "md", "official", "javascript", "gatabot"],
