--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 "name": "Admin-TK",
 "version": "1.0.0", 
-"description": "Super Bot WhatsApp",
+"description": "Super Admin de WhatsApp",
 "main": "index.js",
 "type": "module",
     
