--- a/package.json
+++ b/package.json
@@ -8,17 +8,15 @@
         "lib": "lib",
         "src": "src",
         "plugins": "plugins",
-        // Espacios en blanco para agregar nuevos directorios:
-        "additional1": "", // EDITAR
-        "additional2": ""  // EDITAR
+        "additional1": "",
+        "additional2": ""
     },
     "scripts": {
         "start": "node index.js --autocleartmp --autoread",
         "test": "nodemon index.js --server --autocleartmp --autoread",
         "mongodb": "node . --db 'url mongodbmu'",
-        // Espacios en blanco para agregar nuevos scripts:
-        "script1": "", // EDITAR
-        "script2": ""  // EDITAR
+        "script1": "",
+        "script2": "" 
     },
     "dependencies": {
         "@adiwajshing/baileys": "npm:@whiskeysockets/baileys@latest",
@@ -82,8 +80,7 @@
         "yargs": "^17.7.2",
         "yt-search": "^2.10.4",
         "zs-extract": "^1.4.2",
-        // Espacios en blanco para agregar nuevas dependencias:
-        "dependency1": "", // EDITAR
-        "dependency2": ""  // EDITAR
+        "dependency1": "",
+        "dependency2": ""
     }
 }
