--- a/package.json
+++ b/package.json
@@ -1,24 +1,42 @@
 {
-    "name": "Admin-TK",
-    "version": "8.0.0",
-    "description": "Super Admin de WhatsApp - Comunidad TK",
-    "main": "index.js",
-    "type": "module",
-    "directories": {
-        "lib": "lib",
-        "src": "src",
-        "plugins": "plugins",
-        "additional1": "",
-        "additional2": ""
-    },
-    "scripts": {
-        "start": "node index.js --autocleartmp --autoread",
-        "test": "nodemon index.js --server --autocleartmp --autoread",
-        "mongodb": "node . --db 'url mongodbmu'",
-        "script1": "",
-        "script2": "" 
-    },
-    "dependencies": {
+  "name": "Admin-TK",
+  "version": "8.0.0",
+  "description": "Super Admin de WhatsApp - Comunidad TK",
+  "main": "index.js",
+  "type": "module",
+  "directories": {
+    "lib": "lib",
+    "src": "src",
+    "plugins": "plugins",
+    "additional1": "",
+    "additional2": ""
+  },
+  "scripts": {
+    "start": "node index.js --autocleartmp --autoread",
+    "start-qr": "node index.js qr",
+    "start-code": "node index.js code",
+    "test": "nodemon index.js --server --autocleartmp --autoread",
+    "test-file": "node test.js",
+    "update-npm": "npm install -g npm@latest",
+    "install-deps": "npm install --registry=https://registry.npmjs.org/",
+    "mongodb": "node . --db 'url mongodbmu'",
+    "clean-sessions": "node tools/cleanSessions.js",
+    "run-custom": "node customScript.js",
+    "dev": "nodemon index.js"
+  },
+  "homepage": "https://github.com/ComunidadTK/Admin-TK",
+  "author": {
+    "name": "Comunidad TK"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ComunidadTK/Admin-TK.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ComunidadTK/Admin-TK/issues"
+  },
+  "license": "GPL-3.0-or-later",
+  "dependencies": {
         "@adiwajshing/baileys": "npm:@whiskeysockets/baileys@latest",
         "@bochilteam/scraper": "^5.0.1",
         "@vitalets/google-translate-api": "^9.2.0",
