--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "mime-types": "^2.1.34",
     "moment-timezone": "^0.5.41",
     "mongoose": "^7.0.0",
+    "node-cron": "^3.0.2",
     "node-fetch": "^3.2.0",
     "node-gtts": "^2.0.2",
     "node-os-utils": "^1.3.6",
@@ -76,6 +77,7 @@
     "request": "^2.88.2",
     "similarity": "^1.2.1",
     "socket.io": "^4.6.1",
+    "sqlite3": "^5.1.6",
     "steno": "^3.0.0",
     "syntax-error": "^1.4.0",
     "terminal-image": "^2.0.0",
