--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "request": "^2.88.2",
     "similarity": "^1.2.1",
     "socket.io": "^4.6.1",
+    "sqlite": "^4.0.25",
     "sqlite3": "^5.1.6",
     "steno": "^3.0.0",
     "syntax-error": "^1.4.0",
