--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "axios": "^1.3.4",
     "cfonts": "^3.1.1",
     "chalk": "^5.0.1",
-    "cheerio": "1.0.0-rc.12",
-    "colors": "1.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "didyoumean": "^1.2.2",
     "emoji-api": "^1.0.2",
@@ -63,7 +63,7 @@
     "node-os-utils": "^1.3.6",
     "node-webpmux": "^3.1.9",
     "ocr-space-api-wrapper": "^2.3.0",
-    "pdf-lib": "*",
+    "pdf-lib": "^1.17.1",
     "perf_hooks": "^0.0.1",
     "pino": "^8.11.0",
     "pino-pretty": "^9.4.0",
@@ -82,7 +82,7 @@
     "steno": "^3.0.0",
     "syntax-error": "^1.4.0",
     "terminal-image": "^2.0.0",
-    "translate-google-api": "*",
+    "translate-google-api": "^0.3.0",
     "url-regex-safe": "^3.0.0",
     "util": "^0.12.5",
     "uuid": "^8.3.2",
@@ -91,7 +91,7 @@
     "yargs": "^17.7.2",
     "yt-search": "^2.10.4",
     "zs-extract": "^1.4.2",
-    "m3u8-parser": "^4.9.0",
+    "m3u8-parser": "^4.6.0",
     "path": "^0.12.7",
     "fs": "0.0.1-security",
     "child_process": "^1.0.2"
