--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "@bochilteam/scraper": "^5.0.1",
     "@vitalets/google-translate-api": "^9.2.0",
     "awesome-phonenumber": "^2.68.0",
-    "axios": "^1.5.0",
+    "axios": "^1.3.4",
     "cfonts": "^3.1.1",
     "chalk": "^5.0.1",
-    "cheerio": "^1.0.0-rc.12",
+    "cheerio": "1.0.0-rc.12",
     "colors": "1.4.0",
     "dotenv": "^16.3.1",
     "didyoumean": "^1.2.2",
@@ -45,10 +45,12 @@
     "form-data": "^4.0.0",
     "googleapis": "^126.0.0",
     "got": "^13.0.0",
+    "har-validator": "^5.1.5",
+    "https": "^1.0.0",
     "human-readable": "^0.2.1",
     "jimp": "^0.16.1",
     "jsbarcode": "^3.11.5",
-    "jsdom": "^22.1.0",
+    "jsdom": "^19.0.0",
     "link-preview-js": "^3.0.5",
     "lodash": "^4.17.21",
     "lowdb": "^3.0.0",
@@ -61,16 +63,18 @@
     "node-os-utils": "^1.3.6",
     "node-webpmux": "^3.1.9",
     "ocr-space-api-wrapper": "^2.3.0",
-    "pdf-lib": "^1.17.1",
+    "pdf-lib": "*",
     "perf_hooks": "^0.0.1",
     "pino": "^8.11.0",
     "pino-pretty": "^9.4.0",
-    "puppeteer": "^22.8.2",
+    "puppeteer": "^21.6.0",
     "qrcode": "^1.5.0",
     "qrcode-terminal": "^0.12.0",
     "qs": "^6.11.0",
+    "querystring": "^0.2.1",
     "readable-stream": "^4.4.2",
     "readline": "^1.3.0",
+    "request": "^2.88.2",
     "similarity": "^1.2.1",
     "socket.io": "^4.6.1",
     "sqlite": "^4.0.25",
@@ -78,12 +82,12 @@
     "steno": "^3.0.0",
     "syntax-error": "^1.4.0",
     "terminal-image": "^2.0.0",
-    "translate-google-api": "^1.2.0",
+    "translate-google-api": "*",
     "url-regex-safe": "^3.0.0",
     "util": "^0.12.5",
-    "uuid": "^9.0.0",
+    "uuid": "^8.3.2",
     "wa-sticker-formatter": "^4.4.4",
-    "xmldom": "^0.7.6",
+    "xmldom": "^0.6.0",
     "yargs": "^17.7.2",
     "yt-search": "^2.10.4",
     "zs-extract": "^1.4.2"
