--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TK-HOST",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Admin de TK-HOST - Comunidad TK",
   "main": "index.js",
   "type": "module",
@@ -45,12 +45,9 @@
     "form-data": "^4.0.0",
     "googleapis": "^126.0.0",
     "got": "^13.0.0",
-    "har-validator": "^5.1.5",
-    "https": "^1.0.0",
-    "human-readable": "^0.2.1",
     "jimp": "^0.16.1",
     "jsbarcode": "^3.11.5",
-    "jsdom": "^19.0.0",
+    "jsdom": "^22.1.0",
     "link-preview-js": "^3.0.5",
     "lodash": "^4.17.21",
     "lowdb": "^3.0.0",
@@ -58,38 +55,36 @@
     "moment-timezone": "^0.5.41",
     "mongoose": "^7.0.0",
     "node-cron": "^3.0.2",
-    "node-fetch": "^3.2.0",
+    "node-fetch": "^3.3.2",
     "node-gtts": "^2.0.2",
     "node-os-utils": "^1.3.6",
     "node-webpmux": "^3.1.9",
     "ocr-space-api-wrapper": "^2.3.0",
-    "pdf-lib": "*",
-    "perf_hooks": "^0.0.1",
-    "pino": "^8.11.0",
-    "pino-pretty": "^9.4.0",
-    "puppeteer": "^21.6.0",
+    "pdf-lib": "^1.17.1",
+    "pino": "^8.14.0",
+    "pino-pretty": "^9.5.0",
+    "puppeteer": "^22.8.2",
     "qrcode": "^1.5.0",
     "qrcode-terminal": "^0.12.0",
     "qs": "^6.11.0",
-    "querystring": "^0.2.1",
-    "readable-stream": "^4.4.2",
+    "readable-stream": "^4.5.0",
     "readline": "^1.3.0",
-    "request": "^2.88.2",
     "similarity": "^1.2.1",
-    "socket.io": "^4.6.1",
+    "socket.io": "^4.7.3",
     "sqlite": "^4.0.25",
     "sqlite3": "^5.1.6",
     "steno": "^3.0.0",
     "syntax-error": "^1.4.0",
     "terminal-image": "^2.0.0",
-    "translate-google-api": "*",
+    "translate-google-api": "^5.1.0",
     "url-regex-safe": "^3.0.0",
     "util": "^0.12.5",
-    "uuid": "^8.3.2",
+    "uuid": "^9.0.0",
     "wa-sticker-formatter": "^4.4.4",
-    "xmldom": "^0.6.0",
+    "xmldom": "^0.7.9",
     "yargs": "^17.7.2",
-    "yt-search": "^2.10.4",
+    "yt-search": "^2.11.0",
     "zs-extract": "^1.4.2"
   }
 }
+
