--- a/package.json
+++ b/package.json
@@ -1,39 +1,58 @@
 {
   "name": "TK-HOST",
   "version": "2.0.0",
-  "description": "Admin de TK-HOST - Comunidad TK",
+  "description": "Bot Oficial de TK-HOST - Comunidad TK",
   "main": "index.js",
   "type": "module",
   "directories": {
     "lib": "lib",
-    "src": "src",
-    "plugins": "plugins"
+    "plugins": "plugins",
+    "src": "src"
   },
   "scripts": {
     "start": "node index.js --autocleartmp --autoread",
     "test": "nodemon index.js --server --autocleartmp --autoread",
     "mongodb": "node . --db 'url mongodbmu'"
   },
-  "homepage": "https://github.com/JJoan02/TK-HOST",
+  "keywords": [
+    "termux-whatsapp-bot",
+    "whatsapp-bot",
+    "whatsapp",
+    "js-whatsapp",
+    "Games-wabot",
+    "wabot-aq",
+    "multi-device",
+    "MD",
+    "baileys-md"
+  ],
+  "homepage": "https://github.com/JJoan02/TK-HOST2.0",
   "author": {
-    "name": "Comunidad TK"
+    "name": "JJoan02, Comunidad TK"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JJoan02/TK-HOST.git"
+    "url": "git+https://github.com/JJoan02/TK-HOST2.0.git"
   },
   "bugs": {
-    "url": "https://github.com/JJoan02/TK-HOST/issues"
+    "url": "https://github.com/JJoan02/TK-HOST2.0/issues"
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@adiwajshing/baileys": "npm:@whiskeysockets/baileys@latest",
+    "@whiskeysockets/baileys": "github:OfcKing/Bailey",
     "@bochilteam/scraper": "^5.0.1",
+    "@bochilteam/scraper-youtube": "^5.0.0",
+    "@ibaraki-douji/pixivts": "^2.4.1",
+    "@sl-code-lords/youtube-dl": "^1.0.4",
+    "@StarlightsTeam/Scraper": "github:StarlightsTeam/StarlightsTeam-Scraper",
     "@vitalets/google-translate-api": "^9.2.0",
-    "awesome-phonenumber": "^2.68.0",
+    "api-dylux": "^1.7.2",
+    "aptoide-scraper": "github:DIEGO-OFC/dv-aptoide-scraper",
+    "awesome-phonenumber": "^6.7.8",
     "axios": "^1.3.4",
-    "cfonts": "^3.1.1",
-    "chalk": "^5.0.1",
+    "acrcloud": "*",
+    "cfonts": "^3.2.0",
+    "chalk": "^5.3.0",
     "cheerio": "1.0.0-rc.12",
     "colors": "1.4.0",
     "dotenv": "^16.3.1",
@@ -42,7 +61,10 @@
     "express": "^4.18.1",
     "file-type": "^19.0.0",
     "fluent-ffmpeg": "^2.1.2",
+    "fluid-spotify.js": "*",
     "form-data": "^4.0.0",
+    "formdata-node": "*",
+    "google-it": "*",
     "googleapis": "^126.0.0",
     "got": "^13.0.0",
     "har-validator": "^5.1.5",
@@ -54,9 +76,11 @@
     "link-preview-js": "^3.0.5",
     "lodash": "^4.17.21",
     "lowdb": "^3.0.0",
+    "megajs": "^1.3.4",
     "mime-types": "^2.1.34",
     "moment-timezone": "^0.5.41",
     "mongoose": "^7.0.0",
+    "neastooapi": "^1.0.2",
     "node-cron": "^3.0.2",
     "node-fetch": "^3.2.0",
     "node-gtts": "^2.0.2",
@@ -72,17 +96,22 @@
     "qrcode-terminal": "^0.12.0",
     "qs": "^6.11.0",
     "querystring": "^0.2.1",
+    "rahad-media-downloader": "^2.1.14",
     "readable-stream": "^4.4.2",
     "readline": "^1.3.0",
     "request": "^2.88.2",
+    "ruhend-scraper": "^8.0.4",
+    "sanzy-spotifydl": "*",
     "similarity": "^1.2.1",
     "socket.io": "^4.6.1",
+    "speedtest-net": "^2.2.0",
     "sqlite": "^4.0.25",
     "sqlite3": "^5.1.6",
     "steno": "^3.0.0",
     "syntax-error": "^1.4.0",
     "terminal-image": "^2.0.0",
-    "translate-google-api": "*",
+    "translate-google-api": "^1.0.4",
+    "url-file-size": "*",
     "url-regex-safe": "^3.0.0",
     "util": "^0.12.5",
     "uuid": "^8.3.2",
@@ -90,7 +119,16 @@
     "xmldom": "^0.6.0",
     "yargs": "^17.7.2",
     "yt-search": "^2.10.4",
-    "zs-extract": "^1.4.2"
+    "ytdl-mp3": "github:HanSamu-27/ytdl-mp3",
+    "zs-extract": "^1.4.2",
+    "canvacard": "^6.0.3",
+    "canvafy": "^7.2.0"
+  },
+  "optionalDependencies": {
+    "@vitalets/google-translate-api": "^9.2.0"
+  },
+  "overrides": {
+    "sharp": "^0.32.2"
   }
 }
 
