--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
   "name": "TK-HOST",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Bot Oficial de TK-HOST - Comunidad TK",
   "main": "index.js",
   "type": "module",
   "directories": {
     "lib": "lib",
-    "plugins": "plugins",
-    "src": "src"
+    "src": "src",
+    "plugins": "plugins"
   },
   "scripts": {
-    "start": "npm run check-install && node index.js",                         
-    "start:dev": "npm run check-install && nodemon index.js",                  
-    "qr": "npm run check-install && node index.js qr",                         
-    "code": "npm run check-install && node index.js code",                     
-    "test": "node test.js",                           
-    "test:watch": "nodemon test.js",                  
-    "install-deps": "npm install --registry=https://registry.npmjs.org/", 
-    "update-npm": "npm install -g npm@latest",        
-    "check-updates": "npm outdated",                 
-    "update-deps": "npm update",                     
-    "lint": "eslint .",                              
-    "lint:fix": "eslint . --fix",                    
-    "build": "node build.js",                        
-    "clean": "rm -rf node_modules && npm cache clean --force && npm install", 
-    "debug": "node --inspect index.js",              
+    "start": "node checkInstall.js && node index.js",
+    "start:dev": "node checkInstall.js && nodemon index.js",
+    "qr": "node checkInstall.js && node index.js qr",
+    "code": "node checkInstall.js && node index.js code",
+    "test": "node test.js",
+    "test:watch": "nodemon test.js",
+    "install-deps": "npm install --registry=https://registry.npmjs.org/",
+    "update-npm": "npm install -g npm@latest",
+    "check-updates": "npm outdated",
+    "update-deps": "npm update",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "build": "node build.js",
+    "clean": "rm -rf node_modules package-lock.json && npm cache clean --force",
+    "debug": "node --inspect index.js",
     "prepare": "npm run clean && npm run install-deps",
     "check-install": "node checkInstall.js"
   },
@@ -64,11 +64,11 @@
     "aptoide-scraper": "github:DIEGO-OFC/dv-aptoide-scraper",
     "awesome-phonenumber": "^6.7.8",
     "axios": "^1.3.4",
-    "acrcloud": "*",
+    "body-parser": "^1.20.2",
     "cfonts": "^3.2.0",
     "chalk": "^5.3.0",
-    "cheerio": "1.0.0-rc.12",
-    "colors": "1.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "didyoumean": "^1.2.2",
     "emoji-api": "^1.0.2",
@@ -77,16 +77,19 @@
     "fluent-ffmpeg": "^2.1.2",
     "fluid-spotify.js": "*",
     "form-data": "^4.0.0",
-    "formdata-node": "*",
+    "formdata-node": "^4.3.2",
     "google-it": "*",
     "googleapis": "^126.0.0",
     "got": "^13.0.0",
     "har-validator": "^5.1.5",
     "https": "^1.0.0",
     "human-readable": "^0.2.1",
+    "imagemaker.js": "^2.0.4",
+    "instagram-url-direct": "^1.0.12",
     "jimp": "^0.16.1",
     "jsbarcode": "^3.11.5",
     "jsdom": "^19.0.0",
+    "libphonenumber-js": "^1.10.55",
     "link-preview-js": "^3.0.5",
     "lodash": "^4.17.21",
     "lowdb": "^3.0.0",
@@ -101,7 +104,7 @@
     "node-os-utils": "^1.3.6",
     "node-webpmux": "^3.1.9",
     "ocr-space-api-wrapper": "^2.3.0",
-    "pdf-lib": "*",
+    "pdfkit": "^0.13.0",
     "perf_hooks": "^0.0.1",
     "pino": "^8.11.0",
     "pino-pretty": "^9.4.0",
@@ -115,7 +118,6 @@
     "readline": "^1.3.0",
     "request": "^2.88.2",
     "ruhend-scraper": "^8.0.4",
-    "sanzy-spotifydl": "*",
     "similarity": "^1.2.1",
     "socket.io": "^4.6.1",
     "speedtest-net": "^2.2.0",
@@ -125,7 +127,6 @@
     "syntax-error": "^1.4.0",
     "terminal-image": "^2.0.0",
     "translate-google-api": "^1.0.4",
-    "url-file-size": "*",
     "url-regex-safe": "^3.0.0",
     "util": "^0.12.5",
     "uuid": "^8.3.2",
@@ -133,10 +134,8 @@
     "xmldom": "^0.6.0",
     "yargs": "^17.7.2",
     "yt-search": "^2.10.4",
-    "ytdl-mp3": "github:HanSamu-27/ytdl-mp3",
     "zs-extract": "^1.4.2",
-    "canvacard": "^6.0.3",
-    "canvafy": "^7.2.0"
+    "ytdl-mp3": "github:HanSamu-27/ytdl-mp3"
   },
   "optionalDependencies": {
     "@vitalets/google-translate-api": "^9.2.0"
@@ -145,4 +144,3 @@
     "sharp": "^0.32.2"
   }
 }
-
