--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@bochilteam/scraper-youtube": "^5.0.0",
     "@ibaraki-douji/pixivts": "^2.4.1",
     "@sl-code-lords/youtube-dl": "^1.0.4",
-    "@StarlightsTeam/Scraper": "github:StarlightsTeam/StarlightsTeam-Scraper",
+    "@StarlightsTeam/Scraper": "git+https://github.com/StarlightsTeam/StarlightsTeam-Scraper.git",
     "@vitalets/google-translate-api": "^9.2.0",
     "api-dylux": "^1.7.2",
     "aptoide-scraper": "github:DIEGO-OFC/dv-aptoide-scraper",
@@ -135,7 +135,7 @@
     "yargs": "^17.7.2",
     "yt-search": "^2.10.4",
     "zs-extract": "^1.4.2",
-    "ytdl-mp3": "github:HanSamu-27/ytdl-mp3"
+    "ytdl-mp3": "git+https://github.com/HanSamu-27/ytdl-mp3.git"
   },
   "optionalDependencies": {
     "@vitalets/google-translate-api": "^9.2.0"
