--- a/package.json
+++ b/package.json
@@ -53,58 +53,42 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@adiwajshing/baileys": "npm:@whiskeysockets/baileys@latest",
-    "@whiskeysockets/baileys": "git+https://github.com/OfcKing/Bailey.git",
     "@bochilteam/scraper": "^5.0.1",
-    "@bochilteam/scraper-youtube": "^5.0.0",
-    "@ibaraki-douji/pixivts": "^2.4.1",
-    "@sl-code-lords/youtube-dl": "^1.0.4",
-    "@StarlightsTeam/Scraper": "git+https://github.com/StarlightsTeam/StarlightsTeam-Scraper.git",
     "@vitalets/google-translate-api": "^9.2.0",
-    "api-dylux": "^1.7.2",
-    "aptoide-scraper": "github:DIEGO-OFC/dv-aptoide-scraper",
-    "awesome-phonenumber": "^6.7.8",
+    "awesome-phonenumber": "^2.68.0",
     "axios": "^1.3.4",
-    "body-parser": "^1.20.2",
-    "cfonts": "^3.2.0",
-    "chalk": "^5.3.0",
-    "cheerio": "^1.0.0-rc.12",
-    "colors": "^1.4.0",
+    "cfonts": "^3.1.1",
+    "chalk": "^5.0.1",
+    "cheerio": "1.0.0-rc.12",
+    "colors": "1.4.0",
     "dotenv": "^16.3.1",
     "didyoumean": "^1.2.2",
     "emoji-api": "^1.0.2",
     "express": "^4.18.1",
     "file-type": "^19.0.0",
     "fluent-ffmpeg": "^2.1.2",
-    "fluid-spotify.js": "*",
     "form-data": "^4.0.0",
-    "formdata-node": "^4.3.2",
-    "google-it": "*",
     "googleapis": "^126.0.0",
     "got": "^13.0.0",
     "har-validator": "^5.1.5",
     "https": "^1.0.0",
     "human-readable": "^0.2.1",
-    "imagemaker.js": "^2.0.4",
-    "instagram-url-direct": "^1.0.12",
     "jimp": "^0.16.1",
     "jsbarcode": "^3.11.5",
     "jsdom": "^19.0.0",
-    "libphonenumber-js": "^1.10.55",
     "link-preview-js": "^3.0.5",
     "lodash": "^4.17.21",
     "lowdb": "^3.0.0",
-    "megajs": "^1.3.4",
     "mime-types": "^2.1.34",
     "moment-timezone": "^0.5.41",
     "mongoose": "^7.0.0",
-    "neastooapi": "^1.0.2",
     "node-cron": "^3.0.2",
     "node-fetch": "^3.2.0",
     "node-gtts": "^2.0.2",
     "node-os-utils": "^1.3.6",
     "node-webpmux": "^3.1.9",
     "ocr-space-api-wrapper": "^2.3.0",
-    "pdfkit": "^0.13.0",
+    "pdf-lib": "*",
     "perf_hooks": "^0.0.1",
     "pino": "^8.11.0",
     "pino-pretty": "^9.4.0",
@@ -113,20 +97,17 @@
     "qrcode-terminal": "^0.12.0",
     "qs": "^6.11.0",
     "querystring": "^0.2.1",
-    "rahad-media-downloader": "^2.1.14",
     "readable-stream": "^4.4.2",
     "readline": "^1.3.0",
     "request": "^2.88.2",
-    "ruhend-scraper": "^8.0.4",
     "similarity": "^1.2.1",
     "socket.io": "^4.6.1",
-    "speedtest-net": "^2.2.0",
     "sqlite": "^4.0.25",
     "sqlite3": "^5.1.6",
     "steno": "^3.0.0",
     "syntax-error": "^1.4.0",
     "terminal-image": "^2.0.0",
-    "translate-google-api": "^1.0.4",
+    "translate-google-api": "*",
     "url-regex-safe": "^3.0.0",
     "util": "^0.12.5",
     "uuid": "^8.3.2",
@@ -134,13 +115,6 @@
     "xmldom": "^0.6.0",
     "yargs": "^17.7.2",
     "yt-search": "^2.10.4",
-    "zs-extract": "^1.4.2",
-    "ytdl-mp3": "git+https://github.com/HanSamu-27/ytdl-mp3.git"
-  },
-  "optionalDependencies": {
-    "@vitalets/google-translate-api": "^9.2.0"
-  },
-  "overrides": {
-    "sharp": "^0.32.2"
+    "zs-extract": "^1.4.2"
   }
 }
