--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TK-HOST",
+  "name": "TK-HOST2.0",
   "version": "2.1.0",
   "description": "Bot Oficial de TK-HOST - Comunidad TK",
   "main": "index.js",
