--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TK-HOST2.0",
+  "name": "TK-HOST",
   "version": "2.1.0",
   "description": "Bot Oficial de TK-HOST - Comunidad TK",
   "main": "index.js",
@@ -10,35 +10,13 @@
     "plugins": "plugins"
   },
   "scripts": {
-    "start": "node checkInstall.js && node index.js",
-    "start:dev": "node checkInstall.js && nodemon index.js",
-    "qr": "node checkInstall.js && node index.js qr",
-    "code": "node checkInstall.js && node index.js code",
-    "test": "node test.js",
-    "test:watch": "nodemon test.js",
-    "install-deps": "npm install --registry=https://registry.npmjs.org/",
-    "update-npm": "npm install -g npm@latest",
-    "check-updates": "npm outdated",
+    "start": "node index.js --autocleartmp --autoread",
+    "test": "nodemon index.js --server --autocleartmp --autoread",
+    "mongodb": "node . --db 'url mongodbmu'",
+    "qr": "node index.js qr",
     "update-deps": "npm update",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "build": "node build.js",
-    "clean": "rm -rf node_modules package-lock.json && npm cache clean --force",
-    "debug": "node --inspect index.js",
-    "prepare": "npm run clean && npm run install-deps",
-    "check-install": "node checkInstall.js"
+    "install-deps": "npm install --registry=https://registry.npmjs.org/"
   },
-  "keywords": [
-    "termux-whatsapp-bot",
-    "whatsapp-bot",
-    "whatsapp",
-    "js-whatsapp",
-    "Games-wabot",
-    "wabot-aq",
-    "multi-device",
-    "MD",
-    "baileys-md"
-  ],
   "homepage": "https://github.com/JJoan02/TK-HOST",
   "author": {
     "name": "JJoan02, Comunidad TK"
@@ -53,6 +31,8 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@adiwajshing/baileys": "npm:@whiskeysockets/baileys@latest",
+    "@whiskeysockets/baileys": "^6.7.5",
+    "@adiwajshing/keyed-db": "^0.2.4",
     "@bochilteam/scraper": "^5.0.1",
     "@vitalets/google-translate-api": "^9.2.0",
     "awesome-phonenumber": "^2.68.0",
@@ -60,7 +40,7 @@
     "cfonts": "^3.1.1",
     "chalk": "^5.0.1",
     "cheerio": "1.0.0-rc.12",
-    "colors": "1.4.0",
+    "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "didyoumean": "^1.2.2",
     "emoji-api": "^1.0.2",
@@ -70,7 +50,6 @@
     "form-data": "^4.0.0",
     "googleapis": "^126.0.0",
     "got": "^13.0.0",
-    "har-validator": "^5.1.5",
     "https": "^1.0.0",
     "human-readable": "^0.2.1",
     "jimp": "^0.16.1",
@@ -107,14 +86,19 @@
     "steno": "^3.0.0",
     "syntax-error": "^1.4.0",
     "terminal-image": "^2.0.0",
-    "translate-google-api": "*",
+    "translate-google-api": "^1.0.4",
     "url-regex-safe": "^3.0.0",
     "util": "^0.12.5",
     "uuid": "^8.3.2",
     "wa-sticker-formatter": "^4.4.4",
     "xmldom": "^0.6.0",
     "yargs": "^17.7.2",
-    "yt-search": "^2.10.4",
-    "zs-extract": "^1.4.2"
+    "yt-search": "^2.10.4"
+  },
+  "optionalDependencies": {
+    "@vitalets/google-translate-api": "^9.2.0"
+  },
+  "overrides": {
+    "sharp": "^0.32.2"
   }
 }
