--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
   "name": "TK-HOST",
-  "version": "2.1.0",
-  "description": "Bot Oficial de TK-HOST - Comunidad TK",
+  "version": "2.0.0",
+  "description": "Bot Oficial de TK-HOST",
   "main": "index.js",
   "type": "module",
   "directories": {
     "lib": "lib",
-    "src": "src",
     "plugins": "plugins"
   },
   "scripts": {
     "start": "node index.js --autocleartmp --autoread",
     "test": "nodemon index.js --server --autocleartmp --autoread",
     "mongodb": "node . --db 'url mongodbmu'",
-    "qr": "node index.js qr",
-    "update-deps": "npm update",
-    "install-deps": "npm install --registry=https://registry.npmjs.org/"
+    "install-deps": "npm install --registry=https://registry.npmjs.org/",
+    "clean": "rm -rf node_modules package-lock.json && npm cache clean --force",
+    "update-deps": "npm update"
   },
+  "keywords": [
+    "termux-whatsapp-bot",
+    "whatsapp-bot",
+    "whatsapp",
+    "js-whatsapp",
+    "Games-wabot",
+    "wabot-aq",
+    "multi-device",
+    "MD",
+    "baileys-md"
+  ],
   "homepage": "https://github.com/JJoan02/TK-HOST",
   "author": {
-    "name": "JJoan02, Comunidad TK"
+    "name": "JJoan02"
   },
   "repository": {
     "type": "git",
@@ -30,70 +40,59 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@adiwajshing/baileys": "npm:@whiskeysockets/baileys@latest",
-    "@whiskeysockets/baileys": "^6.7.5",
+    "baileys-whiskey-latest": "npm:@whiskeysockets/baileys@latest",
+    "baileys-whiskey-6.7.5": "@whiskeysockets/baileys@^6.7.5",
+    "baileys-adi-3.5.0": "@adiwajshing/baileys@^3.5.0",
     "@adiwajshing/keyed-db": "^0.2.4",
-    "@bochilteam/scraper": "^5.0.1",
-    "@vitalets/google-translate-api": "^9.2.0",
-    "awesome-phonenumber": "^2.68.0",
+    "baileys-ofcking": "github:OfcKing/Bailey",
+    "@bochilteam/scraper": "^4.2.4",
+    "@ibaraki-douji/pixivts": "^2.4.1",
+    "@StarlightsTeam/Scraper": "github:StarlightsTeam/StarlightsTeam-Scraper",
+    "awesome-phonenumber": "^6.7.8",
+    "fluid-spotify.js": "^1.0.0",
     "axios": "^1.3.4",
-    "cfonts": "^3.1.1",
-    "chalk": "^5.0.1",
-    "cheerio": "1.0.0-rc.12",
-    "colors": "^1.4.0",
-    "dotenv": "^16.3.1",
-    "didyoumean": "^1.2.2",
-    "emoji-api": "^1.0.2",
-    "express": "^4.18.1",
+    "@bochilteam/scraper-youtube": "^5.0.0",
+    "aptoide-scraper": "github:DIEGO-OFC/dv-aptoide-scraper",
+    "neastooapi": "^1.0.2",
+    "@sl-code-lords/youtube-dl": "^1.0.4",
+    "api-dylux": "^1.7.2",
+    "megajs": "^1.3.4",
+    "canvacard": "^6.0.3",
+    "canvafy": "^7.2.0",
+    "ruhend-scraper": "^8.0.4",
+    "rahad-media-downloader": "^2.1.14",
+    "@nechlophomeriaa/spotifydl": "^1.0.31",
+    "cfonts": "^3.2.0",
+    "chalk": "^5.3.0",
+    "cheerio": "npm:cheerio@1.0.0-rc.12",
+    "acrcloud": "^1.0.0",
     "file-type": "^19.0.0",
     "fluent-ffmpeg": "^2.1.2",
-    "form-data": "^4.0.0",
-    "googleapis": "^126.0.0",
-    "got": "^13.0.0",
-    "https": "^1.0.0",
+    "formdata-node": "^4.3.2",
+    "google-it": "^1.6.3",
+    "node-webpmux": "^3.1.1",
     "human-readable": "^0.2.1",
-    "jimp": "^0.16.1",
-    "jsbarcode": "^3.11.5",
     "jsdom": "^19.0.0",
-    "link-preview-js": "^3.0.5",
     "lodash": "^4.17.21",
     "lowdb": "^3.0.0",
-    "mime-types": "^2.1.34",
+    "jimp": "^0.16.1",
     "moment-timezone": "^0.5.41",
-    "mongoose": "^7.0.0",
-    "node-cron": "^3.0.2",
-    "node-fetch": "^3.2.0",
+    "translate-google-api": "^1.0.4",
     "node-gtts": "^2.0.2",
-    "node-os-utils": "^1.3.6",
-    "node-webpmux": "^3.1.9",
-    "ocr-space-api-wrapper": "^2.3.0",
-    "pdf-lib": "*",
+    "url-regex-safe": "^3.0.0",
     "perf_hooks": "^0.0.1",
+    "url-file-size": "^1.0.0",
     "pino": "^8.11.0",
-    "pino-pretty": "^9.4.0",
-    "puppeteer": "^21.6.0",
     "qrcode": "^1.5.0",
     "qrcode-terminal": "^0.12.0",
-    "qs": "^6.11.0",
-    "querystring": "^0.2.1",
-    "readable-stream": "^4.4.2",
     "readline": "^1.3.0",
-    "request": "^2.88.2",
-    "similarity": "^1.2.1",
-    "socket.io": "^4.6.1",
-    "sqlite": "^4.0.25",
-    "sqlite3": "^5.1.6",
-    "steno": "^3.0.0",
+    "sanzy-spotifydl": "^1.0.0",
     "syntax-error": "^1.4.0",
-    "terminal-image": "^2.0.0",
-    "translate-google-api": "^1.0.4",
-    "url-regex-safe": "^3.0.0",
-    "util": "^0.12.5",
-    "uuid": "^8.3.2",
-    "wa-sticker-formatter": "^4.4.4",
-    "xmldom": "^0.6.0",
+    "speedtest-net": "^2.2.0",
     "yargs": "^17.7.2",
-    "yt-search": "^2.10.4"
+    "wa-sticker-formatter": "^4.4.4",
+    "yt-search": "^2.10.4",
+    "ytdl-mp3": "github:HanSamu-27/ytdl-mp3"
   },
   "optionalDependencies": {
     "@vitalets/google-translate-api": "^9.2.0"
