--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "baileys-whiskey-latest": "npm:@whiskeysockets/baileys@latest",
+    "npm install @adiwajshing/baileys",
     "baileys-whiskey-6.7.5": "@whiskeysockets/baileys@^6.7.5",
     "baileys-adi-3.5.0": "@adiwajshing/baileys@^3.5.0",
     "@adiwajshing/keyed-db": "^0.2.4",
