--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2",
     "@whiskeysockets/baileys": "^6.7.5",
     "@adiwajshing/baileys": "npm:@whiskeysockets/baileys@^6.7.5",
     "mongoose": "^8.3.2",
